# ui-lvgl-components

./: .gitignore  README.md  build_demo.sh  clean_env.sh  init_env.sh  library.json  platformio.ini  run_demo.sh  watch_demo.sh
examples/sdl_demo/: .gitignore  CMakeLists.txt  lv_conf.h
examples/sdl_demo/src/: main.cpp  mouse_cursor_icon.c
examples/sdl_demo/src/hal/: hal.c  hal.h
examples/sdl_demo/src/hw_simulator/: HwSimulator.cpp  HwSimulator.hpp
include/oc/ui/lvgl/: SquareSizePolicy.hpp
include/oc/ui/lvgl/component/: ParameterEnum.hpp  ParameterKnob.hpp  ParameterSwitch.hpp
include/oc/ui/lvgl/style/: StyleBuilder.hpp
include/oc/ui/lvgl/theme/: BaseTheme.hpp
include/oc/ui/lvgl/widget/: ButtonWidget.hpp  EnumWidget.hpp  KnobWidget.hpp  Label.hpp  ScrollLabel.hpp  StateIndicator.hpp  VirtualList.hpp
src/component/: ParameterEnum.cpp  ParameterKnob.cpp  ParameterSwitch.cpp
src/widget/: ButtonWidget.cpp  EnumWidget.cpp  KnobWidget.cpp  Label.cpp  ScrollLabel.cpp  StateIndicator.cpp  VirtualList.cpp
tools/: zig-toolchain.cmake
